--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
+    "@analogjs/vite-plugin-angular": "~1.19.1",
+    "@analogjs/vitest-angular": "~1.19.1",
     "@angular-devkit/core": "~20.3.0",
     "@angular-devkit/schematics": "~20.3.0",
     "@angular/build": "~20.3.0",
@@ -34,6 +36,7 @@
     "@nx/jest": "22.0.2",
     "@nx/js": "22.0.2",
     "@nx/playwright": "22.0.2",
+    "@nx/vite": "22.0.2",
     "@nx/web": "22.0.2",
     "@nx/workspace": "22.0.2",
     "@playwright/test": "^1.36.0",
@@ -42,8 +45,10 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
-    "@types/node": "18.16.9",
+    "@types/node": "20.19.9",
     "@typescript-eslint/utils": "^8.40.0",
+    "@vitest/coverage-v8": "^3.0.5",
+    "@vitest/ui": "^3.0.0",
     "angular-eslint": "^20.3.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
@@ -52,13 +57,17 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.6.1",
     "jest-util": "^29.7.0",
+    "jiti": "2.4.2",
+    "jsdom": "~22.1.0",
     "nx": "22.0.2",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.9.2",
-    "typescript-eslint": "^8.40.0"
+    "typescript-eslint": "^8.40.0",
+    "vite": "^7.0.0",
+    "vitest": "^3.0.0"
   },
   "nx": {
     "includedScripts": []
