--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,7 +8,10 @@
     "lib": ["es2020", "dom"],
     "baseUrl": ".",
     "paths": {
-      "@dn-d-servant/data-access": ["libs/data-access/src/index.ts"]
+      "@dn-d-servant/data-access": ["libs/data-access/src/index.ts"],
+      "@dn-d-servant/character-sheet-feature": [
+        "libs/character-sheet/feature/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
