--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/cli": "~20.3.0",
     "@angular/compiler-cli": "~20.3.0",
     "@angular/language-service": "~20.3.0",
+    "@angular/material": "^20.2.12",
     "@eslint/js": "^9.8.0",
     "@nx/angular": "22.0.2",
     "@nx/devkit": "22.0.2",
