--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/router": "~20.3.0",
     "material-symbols": "^0.39.1",
     "rxjs": "~7.8.0",
+    "type-fest": "^5.2.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
