--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/platform-browser": "~20.3.0",
     "@angular/platform-browser-dynamic": "~20.3.0",
     "@angular/router": "~20.3.0",
+    "firebase": "^12.5.0",
     "material-symbols": "^0.39.1",
     "rxjs": "~7.8.0",
     "type-fest": "^5.2.0",
