--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,10 +9,9 @@
     "baseUrl": ".",
     "paths": {
       "@dn-d-servant/data-access": ["libs/data-access/src/index.ts"],
-      "@dn-d-servant/character-sheet-feature": [
-        "libs/character-sheet/feature/src/index.ts"
-      ],
-      "@dn-d-servant/util": ["libs/util/src/index.ts"]
+      "@dn-d-servant/character-sheet-feature": ["libs/character-sheet/feature/src/index.ts"],
+      "@dn-d-servant/util": ["libs/util/src/index.ts"],
+      "@dn-d-servant/dm-screen-feature": ["libs/dm-screen/feature/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
