--- a/package.json
+++ b/package.json
@@ -17,8 +17,14 @@
     "@angular/platform-browser": "~20.3.0",
     "@angular/platform-browser-dynamic": "~20.3.0",
     "@angular/router": "~20.3.0",
+    "@types/deep-equal": "^1.0.4",
+    "@types/object-path": "^0.11.4",
+    "clean-deep": "^3.4.0",
+    "deep-equal": "^2.2.3",
+    "deep-object-diff": "^1.1.9",
     "firebase": "^12.5.0",
     "material-symbols": "^0.39.1",
+    "object-path": "^0.11.8",
     "rxjs": "~7.8.0",
     "type-fest": "^5.2.0",
     "zone.js": "~0.15.0"
