--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -12,7 +12,9 @@
       "@dn-d-servant/character-sheet-feature": ["libs/character-sheet/feature/src/index.ts"],
       "@dn-d-servant/util": ["libs/util/src/index.ts"],
       "@dn-d-servant/dm-screen-feature": ["libs/dm-screen/feature/src/index.ts"],
-      "@dn-d-servant/authentication-feature": ["libs/authentication/feature/src/index.ts"]
+      "@dn-d-servant/authentication-feature": ["libs/authentication/feature/src/index.ts"],
+      "@dn-d-servant/character-sheet-data-access": ["libs/character-sheet/data-access/src/index.ts"],
+      "@dn-d-servant/character-sheet-util": ["libs/character-sheet/util/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
