--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "deep-equal": "^2.2.3",
     "deep-object-diff": "^1.1.9",
     "firebase": "^12.5.0",
+    "jspdf": "^3.0.4",
     "material-symbols": "^0.39.1",
     "object-path": "^0.11.8",
     "rxjs": "~7.8.0",
